2013-04-29  Richard Biener  <rguenther@suse.de>

PR middle-end/57075
	* tree-inline.c (copy_edges_for_bb): Still split the bbs,
	even if not adding abnormal edges for calls that can make
	abnormal gotos.

	* gcc.dg/torture/pr57075.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@198423 138bc75d-0d04-0410-961f-82ee72b054a4